@@ -1,6 +1,8 @@
 
 HEAD
 ====
+Fixes:
+- length2, SYSRQ, RAWNAT: preinitialize values for ipv6_find_hdr
 
 
 v1.45 (2012-07-16)
